--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "authapi",
   "version": "1.0.0",
   "main": "index.ts",
+  "type": "module",
   "scripts": {
-    "start": "node src/index.ts",
+    "start": "node --loader ts-node/esm src/index.ts",
     "lint": "eslint .",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
     "dev": "tsc --watch"
@@ -20,13 +21,19 @@
   "description": "Simple authentication API",
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@trpc/server": "^10.45.2",
+    "@types/cookie-parser": "^1.4.8",
+    "@types/jsonwebtoken": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^8.16.0",
     "@typescript-eslint/parser": "^8.16.0",
+    "cookie-parser": "^1.4.7",
     "eslint": "^9.15.0",
     "eslint-config-prettier": "^9.1.0",
+    "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "prettier": "3.4.1",
+    "redis": "^4.7.0",
     "typescript": "^5.7.2",
-    "typescript-eslint": "^8.16.0",
-    "ts-node": "^10.9.2"
+    "typescript-eslint": "^8.16.0"
   }
 }
